:pencil2: Slovak translation 100%
Changelog:
>Fixed minor typos,
>Finished the Info section,
>Finished advanced settings,

--- a/web_server/html/_i18n/slovak.yml
+++ b/web_server/html/_i18n/slovak.yml
@@ -77,7 +77,7 @@ setup:
         message-1: "Nastavenie hotové!"
         message-2: "Znova sa pripojte ku sieti"
 
-    attribution: "Designovane Samom Dentym"
+    attribution: "Designovane Sam Denty"
 
 scan:
     title: "Sken"
@@ -127,7 +127,7 @@ attack:
         header: "Pridať SSID"
         toggle-1: "Vytvoriť náhodné"
         field-1: "Počet klonou"
-        toggle-2: "Encrytované"
+        toggle-2: "Encryptované"
         button: "Pridať"
     card-5:
         header: "Počet uloženích SSID ($$)"
@@ -140,9 +140,9 @@ attack:
         C: "spustené"
 
 detector:
-    title: "Detektor deauthentifikácie"
+    title: "Detektor deautentifikácia"
     card-1:
-        header: "Detektor Deauthentifikácie"
+        header: "Detektor deautentifikácia"
         field-1: "Kanál detekcie"
         toggle-1: "Všetky kanály"
         field-2: "Výstražný pin GPIO"
@@ -201,7 +201,7 @@ settings:
         toggle-4: "Simultánne útoky"
     card-6:
         header: "Rozšírené"
-        field-1: "Dôvod deauthentifikácie"
+        field-1: "Dôvod deautentifikácia"
         field-2: "Rýchlosť posielania paketou (pkts/s)"
         field-3: "Interval zmeny adresy MAC"
         toggle-1: "1sekundovy Interval prístupového bodu"
@@ -223,64 +223,64 @@ info:
             D: "Doba prevádzky / využitie pamäte"
             E: "Poslané pakety"
             F: "IP / gateway"
-            G: "Verzie"
+            G: "Verzia"
             H: "Flash &amp; Chip ID"
     card-3:
-        header: "Advanced options"
-        get: "get"
+        header: "Rozšírené možnosti"
+        get: "stiahnut"
     card-4:
-        header: "Contributors"
-        paragraph-1: "This software is based upon the work of Stefan Kremser (Spacehuhn)"
-        paragraph-2: "For more information go to $$contributors page$$ on GitHub."
+        header: "Spolupracovníci"
+        paragraph-1: "Tento software je zalozeny na práci Stefana Kremsera (Spacehuhn)"
+        paragraph-2: "Pre viacej informácii navštívte $$stránku polupracovníkou$$ na GitHub."
     card-5:
-        header: "Included libraries"
+        header: "Použité knižnice"
     strings:
-        A: "Failed to load sysinfo.json"
-        B: "OTA update"
+        A: "Zlyhanie načítania sysinfo.json"
+        B: "OTA aktualizácia"
         C: "upload"
-        D: "Other projects"
-        E: "Report bug"
-        F: "Other projects"
+        D: "Iné projekty"
+        E: "Nahláste chybu"
+        F: "Iné projekty"
 
 error:
     title: "404"
-    page-header: "Page not found"
+    page-header: "Stranka neexistuje :/"
 
 errors:
-    bad-response: "ERROR: Bad response"
-    E0: "Failed to scan for networks!"
-    E6: "Reconnect to Wi-Fi network"
-    E7: "INFO: No Wi-Fi network(s) selected!"
-    E10: "Invalid MAC address"
-    E15: "No network(s) selected!"
-    E16: "SSID list full (E16)"
-    E17: "ERROR: Reset the settings"
-    E18: "Failed to save settings!"
-    E19: "Failed to save settings!"
-    E20: "Failed to reset settings!"
-    E21: "Failed to reset settings!"
-    E22: "Reconnect and reload this page"
-    E23: "Failed to restart Wi-PWN!"
-    E24: "Failed to restart Wi-PWN!"
-    E25: "ERROR: Reset the settings"
-    E26: "Failed to restart Wi-PWN!"
-    E27: "Failed to restart Wi-PWN!"
-    E28: "Failed to save settings!"
-    E29: "Failed to save settings!"
-    E30: "Failed to start detector!"
-    E31: "Failed to start detector!"
-    E32: "Failed to save!"
-    E33: "Failed to save!"
-    E34: "Failed to load control.json"
-    E37: "ERROR: Failed to change PIN name"
-    E39: "Failed to update PIN name!"
-    E40: "Failed to update PIN name!"
-    E41: "Failed to reset saved entries!"
-    E42: "Failed to reset saved entries!"
-    E95: "ERROR: Failed to load settings.json"
-    E96: "Reconnect and reload this page"
-    E97: "Didn't receive a response!"
-    E98: "Failed to parse scan results!"
-    E99: "Cleared, don't forget to click save!"
-    E100: "Failed to parse saved SSIDs, clearing..."
-    S1: "Are you sure you want to reboot Wi-PWN?"
+    bad-response: "ERROR: Zlá odpoveď"
+    E0: "Chyba skenu sietí!"
+    E6: "Znova sa pripojet ku sieti Wi-Fi"
+    E7: "INFO: Žiadne siete Wi-Fi neboli najdené!"
+    E10: "Chybná adresa MAC"
+    E15: "Žiadne siete neboli zvolené!"
+    E16: "SSID Plný (E16)"
+    E17: "ERROR: Zresetujte nastavenia"
+    E18: "Nepodarilo sa uložit nastavenia!"
+    E19: "Nepodarilo sa uložit nastavenia!"
+    E20: "Nepodarilo sa zresetovať nastavenia!"
+    E21: "Nepodarilo sa zresetovať nastavenia!"
+    E22: "Znova sa pripojte ku sieti Wi-Fi a znova načítajte stranku"
+    E23: "Nepodarilo sa reštartovať Wi-PWN!"
+    E24: "Nepodarilo sa reštartovať Wi-PWN!"
+    E25: "ERROR: Zresetujte nastavenia"
+    E26: "Nepodarilo sa reštartovať Wi-PWN!"
+    E27: "Nepodarilo sa reštartovať Wi-PWN!"
+    E28: "Nepodarilo sa uložit nastavenia!"
+    E29: "Nepodarilo sa uložit nastavenia!"
+    E30: "Nepodarilo sa spustiť detektor!"
+    E31: "Nepodarilo sa spustiť detektor!"
+    E32: "Nepodarilo sa uložiť!"
+    E33: "Nepodarilo sa uložiť!"
+    E34: "Chyba načítania control.json"
+    E37: "ERROR: Chyba zmenenia mena PINU"
+    E39: "Aktualizacia mena PINU zlihala!"
+    E40: "Aktualizacia mena PINU zlihala!"
+    E41: "Chyba zresetovania uloženích vstupou!"
+    E42: "Chyba zresetovania uloženích vstupou!"
+    E95: "ERROR: Chyba načítania settings.json"
+    E96: "Znova sa pripojte ku sieti Wi-Fi a znova načítajte stranku"
+    E97: "Žiadna odpoveď!"
+    E98: "Zlihanie načítania výsledkou skenu!"
+    E99: "Zmazané, nezabudnite kliknúť uložiť!"
+    E100: "Chyba načítania uloženích SSID, mažem..."
+    S1: "Ste si istí že chcete reštartovat Wi-PWN?"
