--- a/web_server/html/_i18n/slovak.yml
+++ b/web_server/html/_i18n/slovak.yml
@@ -201,7 +201,7 @@ settings:
         toggle-4: "Simultánne útoky"
     card-6:
         header: "Rozšírené"
-        field-1: "Dôvod deautentifikácia"
+        field-1: "Dôvod deauthentifikácie"
         field-2: "Rýchlosť posielania paketou (pkts/s)"
         field-3: "Interval zmeny adresy MAC"
         toggle-1: "1sekundovy Interval prístupového bodu"
@@ -213,12 +213,12 @@ info:
     title: "Informácie"
     card-1:
         header: "Tvorca Wi-PWN"
-        about: "Wi-PWN bol designovaný $$Samom Dentym$$, z originálneho projektu ktorý vytvoril $$spacehuhn &#128020;$$. Wi-PWN je vydaný pod $$CC BY-NC 4.0$$ licenciou."
+        about: "Wi-PWN bol designovaný $$Sam Denty$$, z originálneho projektu ktorý vytvoril $$spacehuhn &#128020;$$. Wi-PWN je vydaný pod $$CC BY-NC 4.0$$ licenciou."
     card-2:
         header: "Wi-PWN"
         table:
             A: "Wi-PWN verzia"
-            B: "Skontrolovať dostupné aktualizácie"
+            B: "Kontrola aktualizácii"
             C: "Aktualizovať"
             D: "Doba prevádzky / využitie pamäte"
             E: "Poslané pakety"
@@ -227,10 +227,10 @@ info:
             H: "Flash &amp; Chip ID"
     card-3:
         header: "Rozšírené možnosti"
-        get: "stiahnut"
+        get: "stiahnuť"
     card-4:
         header: "Spolupracovníci"
-        paragraph-1: "Tento software je zalozeny na práci Stefana Kremsera (Spacehuhn)"
+        paragraph-1: "Tento software je založený na práci Stefana Kremsera (Spacehuhn)"
         paragraph-2: "Pre viacej informácii navštívte $$stránku polupracovníkou$$ na GitHub."
     card-5:
         header: "Použité knižnice"
