--- a/web_server/html/_i18n/polish.yml
+++ b/web_server/html/_i18n/polish.yml
@@ -36,7 +36,7 @@ translation:
 
 nav:
     scan: "Skanuj"
-    users: "Użytlownicy"
+    users: "Użytkownicy"
     attack: "Atak"
     detector: "Wykrywacz"
     control: "Control"
