Turkish translation completed.

--- a/web_server/html/_i18n/turkish.yml
+++ b/web_server/html/_i18n/turkish.yml
@@ -30,259 +30,259 @@
 
 translation:
     # Uncomment & insert your name here
-    #name: "my-name"
+    name: "Ahmet Hakan Beşel"
     # Uncomment & insert a link to your Github / site
-    #url: "https://github.com/my-name"
+    url: "https://github.com/ahmethakanbesel"
 
 nav:
-    scan: "Scan"
-    users: "Users"
-    attack: "Attack"
-    detector: "Detector"
-    control: "Control"
-    settings: "Settings"
-    info: "Info"
+    scan: "Tara"
+    users: "Kullanıcılar"
+    attack: "Saldır"
+    detector: "Dedektör"
+    control: "Kontrol"
+    settings: "Ayarlar"
+    info: "Hakkında"
 
 global:
-    save: "Save"
-    reset: "Reset"
+    save: "Kaydet"
+    reset: "Sıfırla"
     ssid: "SSID"
-    password: "Password"
-    start: "Start"
-    stop: "Stop"
-    name: "Name"
-    reboot: "Reboot"
-    guide: "Guide"
-    footer: "Designed by Sam Denty - @samdenty99"
-    translated-by: "translated by $$"
+    password: "Şifre"
+    start: "Başlat"
+    stop: "Durdur"
+    name: "Ad"
+    reboot: "Yeniden başlat"
+    guide: "Rehber"
+    footer: "Sam Denty tarafından tasarlandı- @samdenty99"
+    translated-by: "$$ tarafından çevrildi."
 
 setup:
-    title: "Setup"
+    title: "Kurulum"
     page-1:
-        header: "Terms and Conditions"
+        header: "Şartlar ve Koşullar"
         card:
-            title: "Welcome to Wi-PWN"
-            paragraph-1: "This software is meant for pentesting only!"
-            paragraph-2: "Wi-PWN can perform deauth attacks on unprotected networks, <i>similar to using a Wi-Fi Jammer.</i>"
-            paragraph-3: "Only use this software on networks you are authorized to use it on."
-            button: "Accept"
+            title: "Wi-PWN'e Hoş Geldiniz'
+            paragraph-1: "Bu yazılım sadece penetrasyon testi içindir!"
+            paragraph-2: "Wi-PWN korumasız ağlara deauth saldırısı gerçekleştirir, <i>Wi-Fi jammera benzer.</i>"
+            paragraph-3: "Bu yazılımı sadece kendi ağınızda yetkili olduğunuzda kullanın."
+            button: "Kabul Ediyorum"
 
     page-2:
-        header: "Setup Wi-PWN"
+        header: "Wi-PWN Kur"
         card:
-            field-1: "Password"
-            toggle-1: "Enable dark mode"
-            button: "Continue"
+            field-1: "Şifre"
+            toggle-1: "Koyu modu etkinleştir"
+            button: "Devam"
 
     page-3:
-        header: "Setup Complete"
-        message-1: "Setup complete!"
-        message-2: "Reconnect to the new network"
+        header: "Kurulum Tamamlandı"
+        message-1: "Kurulum tamamlandı!"
+        message-2: "Yeni ağa bağlanın"
 
-    attribution: "Designed by Sam Denty"
+    attribution: "Sam Denty tarafından tasarlandı"
 
 scan:
-    title: "Scan"
+    title: "Tara"
     card-1:
-        header: "Scan for networks ($$)"
+        header: "Ağları Tara ($$)"
         table:
-            signal: "Signal"
-            security: "Security"
-            channel: "Ch." # Try and abbreviate, column is small
+            signal: "Sinyal"
+            security: "Güvenlik"
+            channel: "Kn." # Try and abbreviate, column is small
     strings:
-        A: "Open" # As in `WPA2` / security
+        A: "Açık" # As in `WPA2` / security
 
 users:
-    title: "Users"
+    title: "Kullanıcılar"
     card-1:
-        header: "Scan for Wi-Fi users ($$)"
+        header: "Wifi Kullanıcılarını Tara ($$)"
         table:
-            info: "Client info"
+            info: "Kullanıcı Bilgisi"
             packets: "Pkts"
     card-2:
-        header: "Saved users ($$)"
+        header: "Kayıtlı kullanıclar ($$)"
     card-3:
-        field-1: "MAC Address"
-        button-1: "Add"
+        field-1: "MAC Adresi"
+        button-1: "Ekle"
     strings:
-        A: "Saved client list is corrupt, reset it?"
-        B: "Clearing the client list..."
-        C: "Scan complete! Reconnect and reload the page"
-        D: "Scanning for users ~ $$s remaining"
+        A: "Kayıtlı kullanıcı listesi zarar görmüş, sıfırlansın mı?"
+        B: "Kullanıcı listesi temizleniyor..."
+        C: "Tarama tamamlandı! Yeniden bağlanın"
+        D: "Kullanıcılar taranıyor ~ $$ kaldı"
 
 attack:
-    title: "Attack"
+    title: "Saldırı"
     card-1:
-        header: "Initiate Attack"
+        header: "Saldırı Öncesi"
         table:
-            attack: "Attack"
-            status: "Status"
-            switch: "Switch"
-            random: "Random"
+            attack: "Saldırı"
+            status: "Durum"
+            switch: "Değiştir"
+            random: "Rastgele"
     card-2:
-        header: "Selected networks &amp; users"
-        button: "Clone"
+        header: "Seçili ağ &amp; kullanıcılar"
+        button: "Kopyala"
     card-3:
-        header-1: "MAC Address"
-        header-2: "Vendor"
+        header-1: "MAC Adresi"
+        header-2: "Üretici"
     card-4:
-        header: "Add SSID"
-        toggle-1: "Generate random"
-        field-1: "Number of clones"
-        toggle-2: "Encrypted"
-        button: "Add"
+        header: "SSID ekle"
+        toggle-1: "Rastgele oluştur"
+        field-1: "Kopya sayısı"
+        toggle-2: "Şifrelenmiş"
+        button: "Ekle"
     card-5:
-        header: "Saved SSIDs ($$)"
-        button-1: "Clear"
-        button-2: "Save"
-        button-3: "Discard changes"
+        header: "Kayıtlı SSID'ler ($$)"
+        button-1: "Temizle"
+        button-2: "Kaydet"
+        button-3: "İptal"
     strings:
-        A: "Random attack interval"
-        B: "ready"
-        C: "running"
+        A: "Rastgele saldırı aralığı"
+        B: "hazır"
+        C: "çalışıyor"
 
 detector:
-    title: "Deauth detector"
+    title: "Deauth dedektörü"
     card-1:
-        header: "Deauth Detector"
-        field-1: "Detector channel"
-        toggle-1: "All channels"
-        field-2: "GPIO Alert Pin"
-        toggle-2: "Invert HIGH/LOW"
-        field-3: "Channel scan time (ms)"
-        button-1: "Save &amp; start"
+        header: "Deauth Dedektörü"
+        field-1: "Dedektör kanalı"
+        toggle-1: "Tüm kanallar"
+        field-2: "GPIO Uyarı Pini"
+        toggle-2: "Tersine çevir AÇIK/KAPALI"
+        field-3: "Kanal tarama süresi (ms)"
+        button-1: "Kaydet &amp; başlat"
     strings:
-        A: "Detector running! Restart device to return to normal"
+        A: "Dedektör çalışıyor! Durdurmak için cihazı yeniden başlatın."
 
 control:
-    title: "GPIO Control"
+    title: "GPIO Kontrol"
     card-1:
-        header: "GPIO Control"
-        button-1: "Reset entries"
+        header: "GPIO Kontrol"
+        button-1: "Kayıtları sıfırla"
         table:
-            pin: "PIN"
-            high: "HIGH"
+            pin: "Pin"
+            high: "AÇIK"
     strings:
-        A: "Failed to switch PIN"
-        B: "Name for PIN"
-        C: "Maximum of 10 characters!"
-        D: "Reset saved entries?"
+        A: "Pin durumu değiştirilemedi"
+        B: "Pin adı"
+        C: "En fazla 10 karakter!"
+        D: "Kayıtlar sıfırlansın mı?"
 
 settings:
-    title: "Settings"
+    title: "Ayarlar"
     card-1:
-        header: "Wi-Fi server"
-        field-1: "Channel"
-        toggle-1: "Hide SSID"
+        header: "Wi-Fi sunucusu"
+        field-1: "Kanal"
+        toggle-1: "SSID'yi Gizle"
     card-2:
-        header: "Wi-Fi client"
-        field-1: "Network SSID"
-        field-2: "Network password"
-        field-3: "ESP hostname"
-        toggle-1: "Enable WiFi client"
+        header: "Wi-Fi Ağına Bağlan"
+        field-1: "SSID"
+        field-2: "Şifre"
+        field-3: "Cihaz (bu) adı"
+        toggle-1: "Wi-Fi ağına bağlan"
     card-3:
-        header: "Customization"
-        field-1: "Cache expiration time"
+        header: "Özelleştirme"
+        field-1: "Önbellekte saklama süresi"
         field-2: "LED Pin"
-        toggle-1: "Enable dark mode"
-        toggle-2: "Enable server caching"
-        toggle-3: "Enable LED indicator"
+        toggle-1: "Koyu tema"
+        toggle-2: "Sunucu önbelleklemesini etkinleştir"
+        toggle-3: "Led uyarıcıyı etkinleştir"
     card-4:
-        header: "UI tweaks"
-        toggle-1: "Simplify interface"
-        toggle-2: "Smaller table rows"
-        toggle-3: "Show reboot button"
+        header: "Arabirim Ayarları"
+        toggle-1: "Kolay Mod"
+        toggle-2: "Küçük tablo satırları"
+        toggle-3: "Yeniden başlat düğmesini göster"
     card-5:
-        header: "Scan &amp; Attack"
-        field-1: "Scan timeout"
-        field-2: "Attack timeout"
-        field-3: "MAC address"
-        toggle-1: "Random MAC address"
-        toggle-2: "Scan for hidden networks" 
-        toggle-3: "Select multiple networks"
-        toggle-4: "Simultaneous attacks"
+        header: "Tarama &amp; Saldırı"
+        field-1: "Tarama zaman aşımı"
+        field-2: "Saldırı zaman aşımı"
+        field-3: "MAC adresi"
+        toggle-1: "Rastgele MAC adresi"
+        toggle-2: "Gizli ağları ara" 
+        toggle-3: "Birden fazla ağ seçilmesine izin ver"
+        toggle-4: "Eşzamanlı saldırılar"
     card-6:
-        header: "Advanced"
-        field-1: "Deauth reason-code"
+        header: "Gelişmiş"
+        field-1: "Deauth sebep kodu"
         field-2: "Packet rate (pkts/s)"
-        field-3: "MAC Change Interval"
-        toggle-1: "1s Beacon interval"
+        field-3: "MAC Değiştirme Sıklığı"
+        toggle-1: "1s Beacon sıklığı"
     strings:
-        A: "Reset Wi-PWN to default settings?"
-        B: "All changes will be lost!"
+        A: "Varsayılan ayarlara sıfırlansın mı?"
+        B: "Tüm değişiklikler kaybolur!"
 
 info:
-    title: "Info"
+    title: "Hakkında"
     card-1:
-        header: "Wi-PWN creator"
-        about: "Wi-PWN was designed by $$Sam Denty$$, from the original project by $$spacehuhn &#128020;$$. Wi-PWN is released under the $$CC BY-NC 4.0$$ license."
+        header: "Wi-PWN hazırlayan"
+        about: "Wi-PWN $$Sam Denty$$ tarafından $$spacehuhn projesi kullanılarak hazırlandı. &#128020;$$. $$CC BY-NC 4.0$$ ile lisanslanmıştır."
     card-2:
         header: "Wi-PWN"
         table:
-            A: "Wi-PWN version"
-            B: "Check for updates"
-            C: "Update"
-            D: "Uptime / memory"
-            E: "Sent packets"
+            A: "Yazılım sürümü"
+            B: "Güncellemeleri denetle"
+            C: "Güncelle"
+            D: "Çalışma Süresi / hafıza"
+            E: "Gönderilen paketler"
             F: "IP / gateway"
-            G: "Versions"
+            G: "Sürümler"
             H: "Flash &amp; Chip ID"
     card-3:
-        header: "Advanced options"
-        get: "get"
+        header: "Gelişmiş ayarlar"
+        get: "getir"
     card-4:
-        header: "Contributors"
-        paragraph-1: "This software is based upon the work of Stefan Kremser (Spacehuhn)"
-        paragraph-2: "For more information go to $$contributors page$$ on GitHub."
+        header: "Katkıda Bulunanlar"
+        paragraph-1: "Stefan Kremser'ın (Spacehuhn) projesi ile geliştirilmiştir"
+        paragraph-2: "Detaylı bilgi için $$contributors page$$ Github sayfasını ziyaret edin."
     card-5:
-        header: "Included libraries"
+        header: "Kullanılan kütüphaneler"
     strings:
-        A: "Failed to load sysinfo.json"
-        B: "OTA update"
-        C: "upload"
-        D: "Other projects"
-        E: "Report bug"
-        F: "Other projects"
+        A: "sysinfo.json dosyası yüklenirken hata oluştur!"
+        B: "OTA güncelleme"
+        C: "yükle"
+        D: "Diğer projeler"
+        E: "Hata bildir"
+        F: "Diğer projeler"
 
 error:
     title: "404"
-    page-header: "Page not found"
+    page-header: "Sayfa bulunamadı"
 
 errors:
-    bad-response: "ERROR: Bad response"
-    E0: "Failed to scan for networks!"
-    E6: "Reconnect to Wi-Fi network"
-    E7: "INFO: No Wi-Fi network(s) selected!"
-    E10: "Invalid MAC address"
-    E15: "No network(s) selected!"
-    E16: "SSID list full (E16)"
-    E17: "ERROR: Reset the settings"
-    E18: "Failed to save settings!"
-    E19: "Failed to save settings!"
-    E20: "Failed to reset settings!"
-    E21: "Failed to reset settings!"
-    E22: "Reconnect and reload this page"
-    E23: "Failed to restart Wi-PWN!"
-    E24: "Failed to restart Wi-PWN!"
-    E25: "ERROR: Reset the settings"
-    E26: "Failed to restart Wi-PWN!"
-    E27: "Failed to restart Wi-PWN!"
-    E28: "Failed to save settings!"
-    E29: "Failed to save settings!"
-    E30: "Failed to start detector!"
-    E31: "Failed to start detector!"
-    E32: "Failed to save!"
-    E33: "Failed to save!"
-    E34: "Failed to load control.json"
-    E37: "ERROR: Failed to change PIN name"
-    E39: "Failed to update PIN name!"
-    E40: "Failed to update PIN name!"
-    E41: "Failed to reset saved entries!"
-    E42: "Failed to reset saved entries!"
-    E95: "ERROR: Failed to load settings.json"
-    E96: "Reconnect and reload this page"
-    E97: "Didn't receive a response!"
-    E98: "Failed to parse scan results!"
-    E99: "Cleared, don't forget to click save!"
-    E100: "Failed to parse saved SSIDs, clearing..."
-    S1: "Are you sure you want to reboot Wi-PWN?"
+    bad-response: "ERROR: Geçersiz yanıt"
+    E0: "Tarama başlatılamadı!"
+    E6: "WiFi'a tekrar bağlanın"
+    E7: "Hiç Wi-Fi seçilmedi!"
+    E10: "Geçersiz MAC adres(ler)i"
+    E15: "Hiç ağ seçilmedi"
+    E16: "SSID tam listesi (E16)"
+    E17: "Hata: Ayarları sıfırlayın"
+    E18: "Ayarlar kaydedilemedi!"
+    E19: "Ayarlar kaydedilemedi!"
+    E20: "Ayarlar sıfırlanamadı!"
+    E21: "Ayarlar sıfırlanamadı!"
+    E22: "Yeniden bağlanın ve sayfayı yenileyin."
+    E23: "Yeniden başlatılamadı!"
+    E24: "Yeniden başlatılamadı!"
+    E25: "Ayarlar sıfırlanamadı!"
+    E26: "Yeniden başlatılamadı!"
+    E27: "Yeniden başlatılamadı!"
+    E28: "Ayarlar kaydedilemedi!"
+    E29: "Ayarlar kaydedilemedi!"
+    E30: "Dedektör başlatılamadı!"
+    E31: "Dedektör başlatılamadı!"
+    E32: "Kaydedilemedi!"
+    E33: "Kaydedilemedi!"
+    E34: "control.json yüklenemedi"
+    E37: "Pin adı değiştirilemedi!"
+    E39: "Pin adı değiştirilemedi!"
+    E40: "Pin adı değiştirilemedi!"
+    E41: "Sıfırlanırken hata oluştu!"
+    E42: "Sıfırlanırken hata oluştu!"
+    E95: "settings.json yüklenemedi"
+    E96: "Yeniden bağlanın ve sayfayı yenileyin."
+    E97: "Hiç yanıt alınamadı!"
+    E98: "Tarama sonuçlşarı gösterilemiyor!"
+    E99: "Kaydet'e basmayı unutmayın!"
+    E100: "SSID listesi yüklenemedi, temizleniyor"
+    S1: "Yeniden başlatmak istediğinize emin misiniz?"
