--- a/web_server/html/_i18n/turkish.yml
+++ b/web_server/html/_i18n/turkish.yml
@@ -1,9 +1,9 @@
-#  _ _ _ _     _____ _ _ _ _____ 
+#  _ _ _ _     _____ _ _ _ _____
 # | | | |_|___|  _  | | | |   | |
 # | | | | |___|   __| | | | | | |
 # |_____|_|   |__|  |_____|_|___|
 #        TRANSLATION FILE
-# 
+#
 # Format:
 #   What is '$$'?
 #       '$$' is a variable thats replaced with HTML
@@ -13,20 +13,20 @@
 #
 #   DO NOT REMOVE THE INDENTATION!
 #       The indentation is critical to YAML, so please don't change it
-#   
+#
 #   Try and retain the case, for example:
 #       If it is capitalized keep it capitalized
-#   
+#
 #   What are the `translation.name` & `translation.url`?
 #       These are strings that will be added to the footer & info page
-#   
+#
 #   I'm unsure about how to translate something / I have a question
 #       No problem! feel free to ask something over at
 #       https://wi-pwn.samdd.me/discord/
-#       
+#
 #   What encoding should I use?
 #       UTF-8 ~ jekyll doesn't support any other encodings
-# 
+#
 
 translation:
     # Uncomment & insert your name here
@@ -61,7 +61,7 @@ setup:
     page-1:
         header: "Şartlar ve Koşullar"
         card:
-            title: "Wi-PWN'e Hoş Geldiniz'
+            title: "Wi-PWN'e Hoş Geldiniz"
             paragraph-1: "Bu yazılım sadece penetrasyon testi içindir!"
             paragraph-2: "Wi-PWN korumasız ağlara deauth saldırısı gerçekleştirir, <i>Wi-Fi jammera benzer.</i>"
             paragraph-3: "Bu yazılımı sadece kendi ağınızda yetkili olduğunuzda kullanın."
@@ -198,7 +198,7 @@ settings:
         field-2: "Saldırı zaman aşımı"
         field-3: "MAC adresi"
         toggle-1: "Rastgele MAC adresi"
-        toggle-2: "Gizli ağları ara" 
+        toggle-2: "Gizli ağları ara"
         toggle-3: "Birden fazla ağ seçilmesine izin ver"
         toggle-4: "Eşzamanlı saldırılar"
     card-6:
